<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/help"
        android:layout_marginTop="20dp"
        android:textSize="30dp"
        android:textColor="#FFFFCC"
        android:layout_gravity="left" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="87dp"
        android:paddingLeft="40dp"
        android:text="@string/help_terminology"
        android:textSize="20dp"
        android:textColor="#FFFFCC"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="87dp"
        android:paddingLeft="40dp"
        android:text="@string/help_website"
        android:textSize="20dp"
        android:textColor="#FFFFCC"
        android:layout_gravity="center_horizontal" />
</LinearLayout>